deploy/k8s/03_service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: snowdrop-site-angular
  name: snowdrop-site-angular
spec:
  selector:
    app: snowdrop-site-angular
  ports:
    - name: http
      port: 80
      targetPort: 8080 # Container port
      protocol: TCP
